[feature] Add paging, create CharactersInfoScreen
Add logic for paging data from API
Fix repositoryImpl for return Flow<PagingData<CharacterDto>>
Fix GetCharactersUseCase
Change viewModel for get Flow<PagingData<CharacterInfo>>
Created sealed class for handle errors
Create @Composables for CharactersInfoScreen
Add strings in strings.xml
Add placeholder image for coil (AsyncImage).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">RickAndMorty</string>
+    <string name="title_topBarCharacters">Characters</string>
+
+    <string name="message_error">Error: %1$s</string>
+    <string name="btn_retry">Retry</string>
+
+    <string name="character_not_found">Character not found</string>
+    <string name="network_error">Network error</string>
+    <string name="http_error">HTTP Error:</string>
+    <string name="unknown_error">Unknown error</string>
 </resources>
