[feature] Add TextFieldCharacters in CharactersInfoScreen
Created @Composable TextFieldCharacters
Add TextFieldCharacters in CharactersInfoScreen
Add new strings for label TextFieldCharacters
Add new parameter in CharactersApi for filter with name
Change logic repository (add new optional parameter)
Fix repositoryImpl with new parameter
Fix CharacterPagingSource with new parameter
Fix GetCharactersUseCase with new parameter
Add logic in CharactersViewModel for update data with filter name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">RickAndMorty</string>
     <string name="title_topBarCharacters">Characters</string>
 
+    <string name="search_character_label">Search character…</string>
+
     <string name="message_error">Error: %1$s</string>
     <string name="btn_retry">Retry</string>
 
