[feature] Created CharacterDetailScreen created AppNavigation
Created CharacterDetailScreen
Created @Composables for CharacterDetailScreen
Add new Getter in CharactersApi for get detail info character
Created new DTO CharacterDetailDto
Created new Model CharacterDetailInfo
Created new logic in mapper for transform CharacterDetailDto to CharacterDetailInfo
Add new method in repository
Created new usecase for get detail info character
Created specific viewModel
Created AppNavigation with type-safe
Created sealed class for DetailUiState

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
 
     <string name="search_character_label">Search character…</string>
 
+    <string name="episodes">Episodes:</string>
+
     <string name="message_error">Error: %1$s</string>
     <string name="btn_retry">Retry</string>
 
